--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
   },
   "dependencies": {
     "@gorhom/bottom-sheet": "^5.0.6",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^2.0.1",
-    "expo": "^52.0.11",
-    "expo-status-bar": "~2.0.0",
+    "expo": "^52.0.14",
+    "expo-status-bar": "^2.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "^0.76.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-popup-menu": "^0.16.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.14.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "^4.1.0",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.0.4",
     "redux": "^5.0.1",
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
+    "@react-native-community/cli": "latest",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.73.0",
     "typescript": "^5.1.3"
