--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.1.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.13.1",
     "react-redux": "^9.0.4",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "redux-thunk": "^3.1.0"
+    "redux-thunk": "^3.1.0",
+    "expo-linking": "~7.0.5",
+    "expo-clipboard": "~7.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
