--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
     "expo-linking": "~7.0.5",
-    "expo-clipboard": "~7.0.1"
+    "expo-clipboard": "~7.0.1",
+    "react-dom": "18.3.1",
+    "react-native-web": "~0.19.13",
+    "@expo/metro-runtime": "~4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
